Excluding all gradle files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.apk
 *.ap_
 
+
 # Files for the ART/Dalvik VM
 *.dex
 
@@ -15,8 +16,14 @@ gen/
 out/
 
 # Gradle files
+gradle
 .gradle/
 build/
+*.bat
+*.gradle
+!app/build.gradle
+gradle.*
+gradlew
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -35,8 +42,10 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/libraries
+.idea
+
+
+
 
 # Keystore files
 *.jks
